--- a/Home.css
+++ b/Home.css
@@ -146,3 +146,8 @@ p{
     line-height: 22px;
     padding: 10px;
 }
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
