--- a/Home.css
+++ b/Home.css
@@ -46,7 +46,7 @@ nav img {
     content: '';
     width: 0%;
     height: 2px;
-    background: #f44336;
+    background: #676da7;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -89,8 +89,8 @@ nav img {
 }
 
 .hero-btn:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #676da7;
+    background: #676da7;
     transition: 0.5s;
 }
 
@@ -107,7 +107,7 @@ nav .fa {
     }
     .nav-links {
         position: absolute;
-        background: #f44336;
+        background: #676da7;
         height: 100vh;
         width: 200px;
         top: 0;
